--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,12 @@
   margin: 0;
   padding: 0;
 }
+
+code {
+  background-color: #eee;
+  border: 1px solid #999;
+  display: block;
+  text-align: left;
+  margin: 30px;
+  padding: 20px;
+}
